@@ -19,7 +19,7 @@ public class MovieLibraryScanTask implements Job {
     private static final Logger logger = LoggerFactory.getLogger(MovieLibraryScanTask.class);
 
     public static List<String> processMovie(Path libraryPath) throws IOException {
-        List<Path> files = Files.list(libraryPath).collect(Collectors.toList());
+        List<Path> files = Files.list(libraryPath).toList();
         List<String> submissions = new LinkedList<>();
         for (Path filePath : files) {
             String fileExtension = FileScanController.getExtension(filePath);
